--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -115,7 +115,7 @@ body {
         border-radius: 8px;
     }
     footer {
-        background-color: #333;
+        /* background-color: #333; */
         color: #f8f9fa;
         padding: 20px 0;
         text-align: center;
