--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -115,10 +115,11 @@ body {
         border-radius: 8px;
     }
     footer {
-        /* background-color: #333; */
+        /* background-color: #333; 
+        text-align: center; */
         color: #f8f9fa;
         padding: 20px 0;
-        text-align: center;
+        
     }
 </style>
 
