--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,3 +1,5 @@
+<!-- app/templates/user/profile.html -->
+
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
@@ -16,4 +18,3 @@
   </div>
 </div>
 {% endblock %}
-
