new edit full prof

--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -346,6 +346,8 @@
             <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
             <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
             <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
+            <li><a href="{{ url_for('edit_full_profile') }}" class="dropdown-item">Editar Perfil Completo</a>
+            </li>
 
             {% if is_admin %}
             <li>
