--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -343,15 +343,18 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-            <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-            <li><a href="{{ url_for('transaction_history') }}" class="dropdown-item">Mis pagos</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi Perfil</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('edit_subscription') }}"> Subscripción</a></li>
+            <li><a href="{{ url_for('transaction_history') }}" class="dropdown-item">Renovaciones</a></li>
+            
+            
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a href="{{ url_for('edit_full_profile') }}" class="dropdown-item">Editar Perfil Completo</a></li>
+            <!-- <li><a href="{{ url_for('edit_full_profile') }}" class="dropdown-item">Editar Perfil Completo</a></li> -->
+            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
             <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('edit_payment_methods') }}">Cambiar metodos de pago</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('edit_payment_methods') }}">Formas de pago</a></li>
             
             {% if is_admin %}
             <li>
